cabal-version: 3.0
name:          convex-node-client
version:       0.0.1
synopsis:      Conveniences for cardano-node clients
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/cardano-convex/sc-tools
bug-reports:   https://github.com/cardano-convex/sc-tools
description:
  Please see the README on GitHub at <https://github.com/cardano-convex/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.NodeClient.Fold
      Convex.NodeClient.Progress
      Convex.NodeClient.Resuming
      Convex.NodeClient.Types
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      mtl,
      transformers,
      text,
      time,
      containers,

    -- cardano dependencies
    build-depends:
      cardano-api >= 1.35.3,
      cardano-ledger-byron,
      cardano-crypto-wrapper,
      cardano-slotting,
      ouroboros-consensus,
      ouroboros-consensus-cardano,
      ouroboros-network,
      typed-protocols

