cabal-version: 3.0
name:          convex-optics
version:       0.3.0.0
synopsis:      Optics for plutus-ledger-api and cardano-api
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Werror -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.CardanoApi.Lenses
    Convex.PlutusLedgerApi.Optics
    Convex.Scripts

  hs-source-dirs:  lib
  build-depends:
    , base                         >=4.14      && <4.20
    , cardano-api                  ==10.17.2.0
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , lens
    , ordered-containers
    , ouroboros-consensus-cardano
    , plutus-ledger-api
    , plutus-tx
