cabal-version: 3.0
name:          convex-plutarch
version:       0.3.0.0
synopsis:      Plutarch - cardano-api interop
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.Plutarch
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      plutarch,
      text

    -- cardano dependencies
    build-depends:
      cardano-api,
      plutus-ledger-api

test-suite convex-plutarch-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:
    Spec.hs
  build-depends:
    base >= 4.14.0,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    QuickCheck,
    lens,
    cardano-ledger-alonzo,
    cardano-ledger-babbage,
    cardano-ledger-shelley,
    convex-plutarch,
    plutarch,
    convex-coin-selection,
    convex-mockchain,
    convex-base,
    convex-wallet,
    cardano-api,
    containers,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib},
    plutus-ledger-api,
    mtl,
    transformers,
    text
