cabal-version: 3.0
name:          convex-trading-bot
version:       0.0.1
synopsis:      Trading bot
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/cardano-convex/sc-tools
bug-reports:   https://github.com/cardano-convex/sc-tools
description:
  Please see the README on GitHub at <https://github.com/cardano-convex/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.TradingBot
      Convex.TradingBot.Cli.Command
      Convex.TradingBot.Cli.Config
      Convex.TradingBot.Cli
      Convex.TradingBot.NodeClient
      Convex.TradingBot.Prices
      Convex.TradingBot.Stats
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      text,
      containers,
      lens,
      convex-base,
      convex-node-client,
      convex-wallet,
      convex-muesli-core,
      transformers,
      optparse-applicative,
      mtl,
      fingertree,
      strict-containers

    -- cardano dependencies
    build-depends:
      cardano-api >= 1.35.3

executable convex-trading-bot
    import: lang
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        convex-trading-bot
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -threaded -rtsopts -O2