cabal-version: 3.4
name:          convex-tx-mod
version:       0.3.0.0
synopsis:      Command-line tool for downloading and exporting transactions
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
                        DerivingStrategies LambdaCase DerivingVia NamedFieldPuns
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
  import: lang
  exposed-modules:
    Convex.TxMod.Cli
    Convex.TxMod.Command
    Convex.TxMod.Env
    Convex.TxMod.Logging
  hs-source-dirs: lib
  build-depends:
    base >= 4.14.0,
    aeson,
    cardano-api,
    optparse-applicative,
    convex-base,
    convex-blockfrost,
    blockfrost-client-core,
    blockfrost-api,
    Blammo,
    mtl,
    lens,
    aeson-pretty,
    bytestring,
    text

executable convex-tx-mod
  import: lang
  main-is: Main.hs
  build-depends:
    base,
    convex-tx-mod
  hs-source-dirs: exe
  ghc-options:
    -threaded -rtsopts -O2