cabal-version: 3.4
name:          convex-tx-mod
version:       0.3.0.0
synopsis:
  Command-line tool for downloading and exporting transactions

license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.TxMod.Cli
    Convex.TxMod.Command
    Convex.TxMod.Env
    Convex.TxMod.Logging

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , aeson-pretty
    , base                    >=4.14.0
    , Blammo
    , blockfrost-api
    , blockfrost-client-core
    , bytestring
    , cardano-api
    , convex-base
    , convex-blockfrost
    , lens
    , mtl
    , optparse-applicative
    , text

executable convex-tx-mod
  import:         lang
  main-is:        Main.hs
  build-depends:
    , base
    , convex-tx-mod

  hs-source-dirs: exe
  ghc-options:    -threaded -rtsopts -O2
