cabal-version: 3.0
name:          un-ada
version:       0.2.0.0-old-node
synopsis:      un-Ada, an Ada stablecoin 
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
                        NamedFieldPuns
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      UnAda.OffChain.Scripts
      UnAda.OffChain.Transaction
      UnAda.OffChain.Value
      UnAda.OnChain.MintingPolicy
      UnAda.OnChain.Types
      UnAda.OnChain.Validator
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      lens

    build-depends:
      convex-base,
      convex-coin-selection

    build-depends:
      cardano-api,
      plutus-tx,
      plutus-tx-plugin,
      plutus-ledger-api

    ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-specialise

test-suite un-ada-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -threaded -rtsopts
  main-is: Spec.hs
  other-modules:
    UnAda.Test.UnitTest
  build-depends:
    base >= 4.14.0,
    tasty,
    tasty-hunit,
    un-ada,
    convex-mockchain,
    convex-wallet,
    convex-base,
    convex-coin-selection,
    cardano-api,
    lens,
    plutus-ledger-api,
    plutus-tx,
    plutus-core
