cabal-version: 3.0
name:          un-ada
version:       0.3.0.0
synopsis:      un-Ada, an Ada stablecoin 
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    UnAda.OffChain.Scripts
    UnAda.OffChain.Transaction
    UnAda.OffChain.Value
    UnAda.OnChain.MintingPolicy
    UnAda.OnChain.Types
    UnAda.OnChain.Validator

  hs-source-dirs:  lib
  build-depends:
    , base  >=4.14.0
    , lens

  build-depends:
    , convex-base
    , convex-coin-selection
    , convex-optics

  build-depends:
    , cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise

test-suite un-ada-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts
  main-is:        Spec.hs
  other-modules:  UnAda.Test.UnitTest
  build-depends:
    , base                   >=4.14.0
    , cardano-api
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-wallet
    , lens
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , tasty
    , tasty-hunit
    , un-ada
