cabal-version: 3.0
name:          convex-wallet
version:       0.3.0.0
synopsis:      Simple wallet
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.Wallet
    Convex.Wallet.API
    Convex.Wallet.Cli
    Convex.Wallet.Cli.Command
    Convex.Wallet.Cli.Config
    Convex.Wallet.MockWallet
    Convex.Wallet.NodeClient
    Convex.Wallet.NodeClient.BalanceClient
    Convex.Wallet.Operator
    Convex.Wallet.WalletState

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , aeson-pretty
    , base                  >=4.14.0
    , bytestring
    , containers
    , convex-base
    , convex-node-client
    , convex-optics
    , katip
    , lens
    , mtl
    , optparse-applicative
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , stm
    , text
    , transformers
    , warp

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , plutus-ledger-api

executable convex-wallet
  import:           lang
  main-is:          Main.hs
  build-depends:
    , base           >=4.14.3.0
    , convex-wallet

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -O2
