cabal-version: 3.0
name:          convex-muesli-core
version:       0.0.1
synopsis:      Muesli types
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost NumericUnderscores
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
      Convex.Muesli.Orderbook.Contract
      Convex.Muesli.Orderbook.Constants
      Convex.Muesli.Orderbook.KnownOrder
      Convex.Muesli.Orderbook.Match
      Convex.Muesli.LP.BuildTx
      Convex.Muesli.LP.Constants
      Convex.Muesli.LP.OnChain.Coin
      Convex.Muesli.LP.OnChain.NFT
      Convex.Muesli.LP.OnChain.OnChainUtils
      Convex.Muesli.LP.OnChain.Types
      Convex.Muesli.LP.Types
    hs-source-dirs: lib
    build-depends:
      base >= 4.14.0,
      convex-base,
      convex-coin-selection,
      aeson,
      containers,
      text,
      validation -any,
      lens -any,
      bytestring -any,
      hex-text -any

    -- cardano dependencies
    build-depends:
      cardano-api >= 1.35.3,
      cardano-ledger-core -any,
      cardano-ledger-shelley -any,
      cardano-ledger-babbage -any,
      plutus-core -any,
      cardano-ledger-alonzo -any,
      plutus-ledger-api -any,
      plutus-tx,
      cardano-binary -any,
      cardano-crypto-class -any

test-suite convex-muesli-core-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -threaded -rtsopts
  main-is: Spec.hs
  build-depends:
    base >= 4.14.0,
    tasty,
    tasty-hunit,
    lens,
    convex-coin-selection,
    convex-muesli-core,
    convex-mockchain,
    convex-base,
    convex-wallet,
    cardano-api >= 1.35.3,
    plutus-ledger-api,
    plutus-tx,
    hex-text
